@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install taskgen-ai"
+    "!pip install taskgen-ai"
    ]
   },
   {
@@ -128,7 +128,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Sentiment': 'Positive', 'Adjectives': ['beautiful', 'sunny'], 'Words': 6}\n"
+      "{'Sentiment': 'Positive', 'Adjectives': ['beautiful', 'sunny'], 'Words': 7}\n"
      ]
     }
    ],
@@ -208,7 +208,7 @@
     {
      "data": {
       "text/plain": [
-       "6"
+       "7"
       ]
      },
      "execution_count": 7,
@@ -472,11 +472,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using LLM to check \"Age is merely the number of years the world has been enjoying you, type: ensure quote includes word age\" to see if it adheres to \"quote includes word age\"\n",
+      "Using LLM to check \"Age is merely the number of years the world has been enjoying you, by Elizabeth Asquith Bibesco\" to see if it adheres to \"quote includes word age\"\n",
       "Requirement Met: True\n",
       "\n",
       "\n",
-      "{'Famous Quote about Age': 'Age is merely the number of years the world has been enjoying you, type: ensure quote includes word age', 'Lucky draw numbers': [7, 21, 45], 'Sample venues': [{'Venue': 'Outdoor Park', 'Description': 'Spacious area with picnic tables and playground for kids'}, {'Venue': 'Indoor Game Center', 'Description': 'Entertainment hub with arcade games and party rooms'}]}\n"
+      "{'Famous Quote about Age': 'Age is merely the number of years the world has been enjoying you, by Elizabeth Asquith Bibesco', 'Lucky draw numbers': [7, 21, 45], 'Sample venues': [{'Venue': 'Outdoor Park', 'Description': 'Spacious area with picnic tables and playground for kids'}, {'Venue': 'Indoor Game Center', 'Description': 'Arcade games, laser tag, and party rooms for a fun-filled celebration'}]}\n"
      ]
     }
    ],
@@ -705,7 +705,7 @@
      "data": {
       "text/plain": [
        "{'sum': 7,\n",
-       " 'poem': 'Three and four, together they soar, happiness galore, a bond to adore.',\n",
+       " 'poem': 'Three and 4, a happy pair, together they make a joyful affair.',\n",
        " 'code': 'def sum_numbers(num1, num2):\\n    return int(num1) + int(num2)'}"
       ]
      },
@@ -718,7 +718,7 @@
     "# multiple outputs with variable names\n",
     "fn = Function(fn_description = '''Output the integer sum of <num1: int or str> and <num2: int or str>\n",
     "generate a poem in style of <poem_style> and code in <prog_language>''', \n",
-    "                 output_format = {'sum': 'sum of two numbers', \n",
+    "                 output_format = {'sum': 'sum of two numbers as an integer', \n",
     "                'poem': 'poem about two numbers',\n",
     "                'code': 'code to do the sum of any two numbers num1 and num2'})\n",
     "fn('three', 4, 'happy', 'Python') #num1, num2, poem_style, prog_language"
@@ -1025,7 +1025,7 @@
     {
      "data": {
       "text/plain": [
-       "{'output': 'The ball made the dog happy.'}"
+       "{'output': 'The ball made the dog very happy.'}"
       ]
      },
      "execution_count": 25,
@@ -1098,7 +1098,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Sentiment': ['Positive', 3], 'Adjectives': [{'Name': 'beautiful', 'Description': 'describes the day'}, {'Name': 'sunny', 'Description': 'describes the day'}], 'Words': {'Number of words': 6, 'Language': {'English': True, 'Chinese': False}, 'Proper Words': True}}\n"
+      "{'Sentiment': ['Positive', 3], 'Adjectives': [{'Name': 'beautiful', 'Description': 'attractive in appearance'}, {'Name': 'sunny', 'Description': 'filled with sunshine'}], 'Words': {'Number of words': 6, 'Language': {'English': True, 'Chinese': False}, 'Proper Words': True}}\n"
      ]
     }
    ],
@@ -1122,12 +1122,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "270f6591-afa5-43e1-a520-c4ad68067977",
+   "metadata": {},
+   "source": [
+    "# 8. Return as JSON\n",
+    "- By default, `strict_json` returns a Python Dictionary\n",
+    "- If needed to parse as JSON, simply set `return_as_json=True`\n",
+    "- By default, this is set to `False` in order to return a Python Dictionry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1f0f2a3f-1966-4cbd-ba66-63ba6c007cfa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"Sentiment\": [\"Positive\", 3], \"Adjectives\": [{\"Name\": \"beautiful\", \"Description\": \"pleasing to the senses\"}, {\"Name\": \"sunny\", \"Description\": \"filled with sunshine\"}], \"Words\": {\"Number of words\": 6, \"Language\": {\"English\": true, \"Chinese\": false}, \"Proper Words\": true}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = strict_json(system_prompt = 'You are a classifier',\n",
+    "                    user_prompt = 'It is a beautiful and sunny day',\n",
+    "                    output_format = {'Sentiment': ['Type of Sentiment', \n",
+    "                                                   'Strength of Sentiment, type: Enum[1, 2, 3, 4, 5]'],\n",
+    "                                    'Adjectives': \"Name and Description, type: List[Dict['Name', 'Description']]\",\n",
+    "                                    'Words': {\n",
+    "                                        'Number of words': 'Word count', \n",
+    "                                        'Language': {\n",
+    "                                              'English': 'Whether it is English, type: bool',\n",
+    "                                              'Chinese': 'Whether it is Chinese, type: bool'\n",
+    "                                                  },\n",
+    "                                        'Proper Words': 'Whether the words are proper in the native language, type: bool'\n",
+    "                                        }\n",
+    "                                    },\n",
+    "                 return_as_json = True) # Toggle this to True (Note: Also works with OpenAI JSON Mode)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "851fae25-cc89-458f-b77f-db4f54b8fc02",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# 8. Additional Output Field Checks (Advanced)\n",
+    "# 9. Additional Output Field Checks (Advanced)\n",
     "\n",
     "- You can also specify your own custom check function that will be used to check the output field (which will be in `str`, `int`, `float`, `list` or `dict` format inferred by LLM or specified in `type: <data type>`)\n",
     "- Ensure that what you are checking for is implied in the output field's description in `output_format` of `strict_json` or `Function`\n",
@@ -1221,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "95ee40f9-827b-4952-b5d9-8cfde7236fe0",
    "metadata": {
     "tags": []
@@ -1259,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "444c96a4-650c-4982-95db-eec35ae3aa3d",
    "metadata": {
     "tags": []
@@ -1295,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "037e302b-ca48-4bc8-8b54-caf3323ab622",
    "metadata": {
     "tags": []
@@ -1317,7 +1363,7 @@
        "{'Python code': 'def myprint():\\n    print(\"hello world\")'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "6c4e3f68-6384-4715-aefa-52e755343046",
    "metadata": {
     "tags": []
@@ -1369,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "2fb7dea7-a034-4964-87fe-d6495bb6d2f8",
    "metadata": {
     "tags": []
@@ -1382,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "96c3aac1-7c14-447a-8e18-cb312492fba4",
    "metadata": {
     "tags": []
@@ -1411,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "b1308e53-e592-466f-aa7a-b91ef0e30878",
    "metadata": {
     "tags": []
@@ -1434,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "35ffdcf6-6433-41f9-bde2-010ab13c12ab",
    "metadata": {
     "tags": []
@@ -1446,7 +1492,7 @@
        "8"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "eb2062d6-b933-41d1-ad40-5bbca7936157",
    "metadata": {
     "tags": []
@@ -1482,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "a6352e40-759d-476f-9a27-549a48557b0d",
    "metadata": {
     "tags": []
