@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "taskgen-ai"
-version = "1.3.1"
+version = "1.3.2"
 authors = [
   { name="John Tan Chong Min", email="tanchongmin@gmail.com" },
 ]
@@ -16,7 +16,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-dependencies = ["openai>=1.3.6"]
+dependencies = ["openai>=1.3.6", "dill>=0.3.7"]
 
 [project.urls]
 Homepage = "https://github.com/simbianai/taskgen"
