@@ -1,1 +1,2 @@
 openai>=1.3.6
+dill>=0.3.7
