@@ -1,3 +1,7 @@
+22 Apr 2024 (v1.3.2)
+- Changes requirements.txt to dill>=0.3.7 so that it can run with colab
+- Added return_as_json = True as an input variable to strict_json (default: False, so it will be a python dictionary), so that you can get the json string as output if needed. Works also for OpenAIJson mode
+
 16 Apr 2024 (v1.3.1)
 - Changed requirements.txt to openai>=1.3.6 so that it is compatible with newer versions of LangChain
 
